# RAG-FinDoc-Assistant

./: .env.example  pyproject.toml
api/: pyproject.toml
app/: config.py  main.py
app/db/: vector_store.py
app/services/: embedding_service.py  llm_service.py
backend/: documents.py  main.py
backend/data/chroma/: chroma.sqlite3
scripts/: documents.py
