[project]
name = "rag-findoc-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic[aiohttp]>=0.112.0",
    "fastapi[standard]>=0.138.1",
    "python-dotenv>=1.2.2",
]

[tool.fastapi]
entrypoint = "backend.main:app"
