[project]
name = "rag-findoc-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic[aiohttp]>=0.112.0",
    "fastapi[standard]>=0.138.1",
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.8",
    "langchain-chroma>=1.1.0",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.13.0",
]

[tool.fastapi]
entrypoint = "backend.main:app"
