[project]
name = "rag-findoc-assistant"
version = "0.1.0"
description = "A RAG-powered financial document assistant that uses real, publicly available documents to answer relevant queries"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "James Durkin", email= "durkin.jfd@gmail.com"}
]
dependencies = [
    "anthropic[aiohttp]>=0.112.0",
    "fastapi[standard]>=0.138.1",
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.8",
    "langchain-chroma>=1.1.0",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.27.2.3",
]

[tool.fastapi]
entrypoint = "app.main:app"
